fix overflow issue

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -13,6 +13,7 @@
   background-color: rgb(228, 227, 253);
   overflow: hidden;
   font-weight: bolder;
+  z-index: 3;
 }
 
 .footer a {
